--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react-ts",
+  "name": "react-ts-todolist",
   "version": "0.1.0",
+  "homepage": "https://hasankoroglu.github.io/react-ts-todolist",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.23",
@@ -32,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
